python/ql/test/library-tests/frameworks/data/test.py
from testlib import getSource, mySink

x = getSource()
mySink(x)